--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-wizard": "^0.3.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^3.3.2",
     "core-js": "^2.4.1",
+    "jquery": "^1.11.2",
     "rxjs": "^5.1.0",
+    "toastr": "^2.1.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
